faw spacing fix

--- a/css/legal-utopia.webflow.css
+++ b/css/legal-utopia.webflow.css
@@ -1197,6 +1197,7 @@ li {
   padding-top: 20px;
   padding-bottom: 20px;
   color: #7e828f;
+  line-height: 1.75;
 }
 
 .faq-wrap {
